--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic-Tac-Toe Game</title>
-    <link rel="stylesheet" href="tic-tac.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="msg-container hide">
@@ -30,6 +30,6 @@
  </main>
     
 
-    <script src="tic-tac.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
